Add a WantedBy clause for networking
We want the devices to at least be available, but we
want to run prior to any dhcp scipts kicking in.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/templates/debian/fix-dhcp-hack.service
+++ b/templates/debian/fix-dhcp-hack.service
@@ -5,6 +5,8 @@ ConditionPathExists=/usr/local/bin/fix-dhcp-hack.sh
 [Service]
 Type=forking
 ExecStart=/usr/local/bin/fix-dhcp-hack.sh
+WantedBy=networking.service
+
 TimeoutSec=0
 StandardOutput=tty
 RemainAfterExit=yes
