tasks: fix dhcp boolean deprecation warning
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,4 @@
 - name: Install script to fix DHCP carelessly and hope for the best always
   import_tasks: fix-dhcp/main.yml
   when:
-    - enable_dhcp_hack
+    - enable_dhcp_hack|bool
